--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
