--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.12"
   }
 }
